Kubernetes/SonarQube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonar-ing
  namespace: jenkins
spec:
  ingressClassName: nginx
  rules:
  - host: "maxsurm.me"
    http:
      paths:
      - pathType: Prefix
        path: /sonar
        backend:
          service:
            name: sonarqube-sonarqube 
            port:
              number: 9000
